<resources>
    <string name="app_name">Hello</string>
    <string name="hello">Happy Birthday!</string>
    <string name="from">Tom</string>
    <string name="btn_reset_label" translatable="false">Reset</string>
    <string name="btn3_label" translatable="false">+3 points</string>
    <string name="btn2_label" translatable="false">+2 points</string>
    <string name="btn1_label" translatable="false">+1 point</string>
    <string name="tname_label" translatable="false">TeamA</string>
    <string name="tname_labe2" translatable="false">TeamB</string>
    <string name="title_activity_second" translatable="false">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_rate" translatable="false">RateActivity</string>
    <string name="btn_label" translatable="false">Button</string>
    <string name="btn_dollar_label" translatable="false">Dollar</string>
    <string name="btn_euro_label" translatable="false">Euro</string>
    <string name="btn_won_label" translatable="false">Won</string>
    <string name="rmb_hint_label" translatable="false">Input RMB</string>
    <string name="btn_save_label" translatable="false">save</string>
    <string name="title_activity_config" translatable="false">ConfigActivity</string>
    <string name="tbtn_opencfg_label" translatable="false">Config</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="btn_opencfg_label" translatable="false">config</string>
    <string name="menu_set_label" translatable="false">Setting</string>


</resources>