<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.swufe.firstapp.SecondActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teamA_name"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/tname_label" />

        <TextView
            android:text="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="55sp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:id="@+id/scoreA" />

        <Button
            android:text="@string/btn3_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="btnAddA3"
            android:id="@+id/btn3A" />

        <Button
            android:text="@string/btn2_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="btnAddA2"
            android:id="@+id/btn2A" />

        <Button
            android:text="@string/btn1_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="btnAddA1"
            android:id="@+id/btn1A" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teamB_name"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/tname_labe2" />

        <TextView
            android:text="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="55sp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:id="@+id/scoreB" />

        <Button
            android:text="@string/btn3_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="btnAddB3"
            android:id="@+id/btn3B" />

        <Button
            android:text="@string/btn2_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="btnAddB2"
            android:id="@+id/btn2B" />

        <Button
            android:text="@string/btn1_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="btnAddB1"
            android:id="@+id/btn1B" />
    </LinearLayout>

    <Button
        android:text="@string/btn_reset_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset"
        android:onClick="btnReset"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>